--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="registerUser"
 			android:text="Register User"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="forgetUser"
 			android:text="Forget User"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="policies"
 			android:text="Policies"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="sendEvent"
 			android:text="Send Event"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="setup"
 			android:text="Setup"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -82,7 +82,7 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="appLogin"
 			android:text="App Login"
 			app:layout_constraintEnd_toEndOf="parent"
@@ -95,12 +95,25 @@
 			android:layout_height="wrap_content"
 			android:layout_marginEnd="128dp"
 			android:layout_marginStart="128dp"
-			android:layout_marginTop="30dp"
+			android:layout_marginTop="10dp"
 			android:onClick="appPayment"
 			android:text="App Payment"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/appLoginButton" />
+
+		<Button
+			android:id="@+id/appTimeline"
+			android:layout_width="200dp"
+			android:layout_height="wrap_content"
+			android:layout_marginEnd="128dp"
+			android:layout_marginStart="128dp"
+			android:layout_marginTop="10dp"
+			android:onClick="timeline"
+			android:text="timeline"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/appPaymentButton" />
 	</android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
